Added pdf link in footer

--- a/src/_scss/app/components/_media-symbol.scss
+++ b/src/_scss/app/components/_media-symbol.scss
@@ -136,7 +136,7 @@
 	// Contact
 	&.mid-right {
 		@media #{$large-up} {
-			bottom: 5%; // patch 22.11.18
+			bottom: 11%; //5%; // patch 22.11.18
 			//top: 44%;
 			right: 0;
 			width: 75%; // patch 22.11.18
